welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:3: error: value lentgh is not a member of Array[Int]
  for (i<-0 to nums.lentgh-1)
                    ^