welcome.lessons.welcome.array.search.AverageValue.scala.code
var t = 0
def averageValue(nums:Array[Int]): Int = {
  for (i<-0 to nums.lentgh-1)
  	t = t+nums(i)
  return t/nums.length
}